// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a field with a description 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c12 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: block;
  font-size: 0.8rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c10 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c10[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10::-webkit-input-placeholder {
  opacity: 0.6;
}

.c10::-moz-placeholder {
  opacity: 0.6;
}

.c10:-ms-input-placeholder {
  opacity: 0.6;
}

.c10::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <span
      class="c7 c8 c1"
    >
      Required for your fannypack
    </span>
    <div
      class="c9 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c10 c11"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a field with a hint 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c12 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c10 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <span
      class="c10 c11 c1"
    >
      Must be awesome
    </span>
  </div>
</div>
`;

exports[`renders correctly for a full width field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c6 {
  display: inline-block;
}

.c5 {
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  margin-bottom: 0 !important;
}

.c2 {
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

.c9 {
  width: 100%;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c3 c1"
      style="align-items: center;"
    >
      <label
        class="c4 c5 c6 c7"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c8 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c9 c10"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="true"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`renders correctly for an optional field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c12 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c7 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c10 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c10[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c10::-webkit-input-placeholder {
  opacity: 0.6;
}

.c10::-moz-placeholder {
  opacity: 0.6;
}

.c10:-ms-input-placeholder {
  opacity: 0.6;
}

.c10::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
      <span
        class="c7 c8 c1"
      >
        OPTIONAL
      </span>
    </div>
    <div />
    <div
      class="c9 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c10 c11"
        id="username"
        style="size: default;"
        type="text"
        value=""
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`states renders correctly for an input with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #d60027 !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c10 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c8 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="true"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value="Jake"
      />
    </div>
    <div />
    <span
      class="c10 c11 c12"
      color="danger"
    >
      This is an invalid name
    </span>
  </div>
</div>
`;

exports[`states renders correctly for an input with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #3926a5 !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c10 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c8 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value="Jake"
      />
    </div>
    <div />
    <span
      class="c10 c11 c12"
      color="primary"
    >
      This is an invalid name
    </span>
  </div>
</div>
`;

exports[`states renders correctly for an input with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #007b2e !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c10 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c8 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value="Jake"
      />
    </div>
    <div />
    <span
      class="c10 c11 c12"
      color="success"
    >
      This is an invalid name
    </span>
  </div>
</div>
`;

exports[`states renders correctly for an input with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #ffb300 !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c13 {
  top: 0.1em;
}

.c3 {
  margin-bottom: 0 !important;
}

.c10 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c8 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <div
    class="c1"
    display="inline-block"
    style="display: inline-block;"
  >
    <div
      class="c2 c1"
      style="align-items: center;"
    >
      <label
        class="c3 c4 c5 c6"
        font-weight="600"
        for="username"
        style="font-weight: 600;"
      >
        Username
      </label>
    </div>
    <div />
    <div
      class="c7 c1"
      style="size: default;"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        style="size: default;"
        type="text"
        value="Jake"
      />
    </div>
    <div />
    <span
      class="c10 c11 c12"
      color="warning"
    >
      This is an invalid name
    </span>
  </div>
</div>
`;
